--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             
             <!-- 下载按钮 -->
             <!-- 注意：href 链接为你提供的 123云盘地址 -->
-            <a href="https://www.123684.com/s/RUrajv-l9dud" class="btn" target="_blank">立即下载 BrowserMe</a>
+            <a href="https://www.ilanzou.com/s/LGdnVnNu" class="btn" target="_blank">立即下载 BrowserMe</a>
         </div>
 
         <!-- 底部提示（模拟微信内置浏览器下载提示） -->
